--- a/www.sxmparliament.org/a7db5d1942de422492771575b5f80354dca0a974.yml
+++ b/www.sxmparliament.org/a7db5d1942de422492771575b5f80354dca0a974.yml
@@ -9,7 +9,7 @@ request:
     Accept-Encoding:
     - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
     Accept:
-    - '*/*'
+    - "*/*"
     User-Agent:
     - Ruby
 response:
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 10 Jan 2017 18:33:33 GMT
+    - Sat, 14 Jan 2017 07:23:12 GMT
     Server:
     - Apache/2.4.23
     X-Powered-By:
@@ -37,16 +37,16 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - 6b46cc80a1166fc32f6c9e033728f33d=4947d93c87af18990fcbb613bcc7d442; path=/; HttpOnly
+    - 6b46cc80a1166fc32f6c9e033728f33d=13b6ee80e9e1aa96a5706257304bc291; path=/; HttpOnly
     X-Mod-Pagespeed:
     - 1.11.33.4-0
     Vary:
     - Accept-Encoding
     Content-Length:
-    - '6708'
+    - '6329'
     Content-Type:
     - text/html; charset=utf-8
   body:
-    encoding: UTF-8
+    encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 10 Jan 2017 18:33:36 GMT
+recorded_at: Sat, 14 Jan 2017 07:23:14 GMT
