--- a/portal-f.pw/3e97cf8a522b89c9ed2027456bc84a2fb969fb57.yml
+++ b/portal-f.pw/3e97cf8a522b89c9ed2027456bc84a2fb969fb57.yml
@@ -14,17 +14,17 @@ request:
     - Ruby
 response:
   status:
-    code: 302
-    message: Found
+    code: 200
+    message: OK
   headers:
     Server:
     - nginx/1.10.3
     Date:
-    - Fri, 05 May 2017 08:29:15 GMT
+    - Sat, 06 May 2017 19:10:28 GMT
     Content-Type:
     - text/html; charset=utf-8
-    Content-Length:
-    - '0'
+    Transfer-Encoding:
+    - chunked
     Connection:
     - keep-alive
     X-Powered-By:
@@ -36,10 +36,8 @@ response:
     Pragma:
     - no-cache
     Last-Modified:
-    - Fri, 05 May 2017 08:29:15 GMT
-    Location:
-    - http://syndication.exoclick.com/splash.php?cat=&idzone=2487549&type=8&p=&sub=
+    - Sat, 06 May 2017 19:10:28 GMT
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 05 May 2017 08:29:15 GMT
+recorded_at: Sat, 06 May 2017 19:10:28 GMT
