--- a/portal-f.pw/3e97cf8a522b89c9ed2027456bc84a2fb969fb57.yml
+++ b/portal-f.pw/3e97cf8a522b89c9ed2027456bc84a2fb969fb57.yml
@@ -14,17 +14,17 @@ request:
     - Ruby
 response:
   status:
-    code: 200
-    message: OK
+    code: 302
+    message: Found
   headers:
     Server:
     - nginx/1.10.3
     Date:
-    - Sat, 06 May 2017 19:10:28 GMT
+    - Sun, 07 May 2017 21:45:49 GMT
     Content-Type:
     - text/html; charset=utf-8
-    Transfer-Encoding:
-    - chunked
+    Content-Length:
+    - '0'
     Connection:
     - keep-alive
     X-Powered-By:
@@ -36,8 +36,10 @@ response:
     Pragma:
     - no-cache
     Last-Modified:
-    - Sat, 06 May 2017 19:10:28 GMT
+    - Sun, 07 May 2017 21:45:49 GMT
+    Location:
+    - http://syndication.exoclick.com/splash.php?cat=&idzone=2486067&type=8&p=&sub=
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 06 May 2017 19:10:28 GMT
+recorded_at: Sun, 07 May 2017 21:46:32 GMT
