--- a/syndication.exoclick.com/7a3e7c7ba145198af086419ab6bc1955b8ac154e.yml
+++ b/syndication.exoclick.com/7a3e7c7ba145198af086419ab6bc1955b8ac154e.yml
@@ -14,13 +14,13 @@ request:
     - Ruby
 response:
   status:
-    code: 200
-    message: OK
+    code: 302
+    message: Found
   headers:
     Server:
     - nginx
     Date:
-    - Mon, 08 May 2017 01:24:19 GMT
+    - Tue, 09 May 2017 03:49:17 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -28,11 +28,13 @@ response:
     Connection:
     - keep-alive
     Set-Cookie:
-    - __uvt=a%3A1%3A%7Bi%3A0%3Bs%3A33%3A%22590fc8c35d5888.467172212363419606%22%3B%7D;
-      expires=Fri, 23-Apr-2077 01:24:19 GMT; Max-Age=1892160000; domain=exoclick.com
-    - tag=1748847%7Crecaptcha-in.pw%7CUSA%7C%7C15650519%7C%7C%7C2486067%7C50.116.3.88%7C508%7C31%7C0%7C0%7C%7C%7C0%7C0%7C%7C%7C1%7C0%7C%7C%7C107%7C%7C0%7C2%7C%7C0%7C13507%7C18141%7C1%7C0%7C0;
-      expires=Tue, 09-May-2017 01:24:19 GMT; Max-Age=86400; path=/; domain=.exoclick.com
+    - __uvt=a%3A1%3A%7Bi%3A0%3Bs%3A33%3A%2259113c3cc5df47.232539842264874670%22%3B%7D;
+      expires=Sat, 24-Apr-2077 03:49:16 GMT; Max-Age=1892160000; domain=exoclick.com
+    - tag=1660685%7Crecaptcha-in.pw%7CUSA%7C%7C15201663%7C%7C%7C2486067%7C50.116.3.88%7C508%7C50%7C0%7C0%7C%7C%7C0%7C0%7C%7C%7C1%7C0%7C%7C%7C107%7C%7C0%7C2%7C%7C0%7C0%7C0%7C1%7C0%7C0;
+      expires=Wed, 10-May-2017 03:49:17 GMT; Max-Age=86400; path=/; domain=.exoclick.com
+    Location:
+    - http://ad.dumedia.ru/click?id=st624ion50&ts=1494301756&hash=252d11aa&jsuid=s8ff92p9migowgs8
   body:
-    encoding: ASCII-8BIT
+    encoding: UTF-8
   http_version: 
-recorded_at: Mon, 08 May 2017 01:24:19 GMT
+recorded_at: Tue, 09 May 2017 03:49:17 GMT
