--- a/www.sxmparliament.org/a7db5d1942de422492771575b5f80354dca0a974.yml
+++ b/www.sxmparliament.org/a7db5d1942de422492771575b5f80354dca0a974.yml
@@ -14,20 +14,34 @@ request:
     - Ruby
 response:
   status:
-    code: 302
-    message: Found
+    code: 200
+    message: OK
   headers:
     Date:
-    - Tue, 09 May 2017 03:49:15 GMT
+    - Wed, 10 May 2017 11:50:05 GMT
     Server:
     - Apache/2.4.25
-    Location:
-    - http://portal-f.pw/XcTyTp
-    Content-Length:
-    - '209'
+    X-Logged-In:
+    - 'False'
+    X-Content-Powered-By:
+    - K2 v2.7.1 (by JoomlaWorks)
+    P3p:
+    - CP="NOI ADM DEV PSAi COM NAV OUR OTRo STP IND DEM"
+    Expires:
+    - Wed, 17 Aug 2005 00:00:00 GMT
+    Cache-Control:
+    - no-store, no-cache, must-revalidate, post-check=0, pre-check=0
+    Pragma:
+    - no-cache
+    Set-Cookie:
+    - 6b46cc80a1166fc32f6c9e033728f33d=l51rju5ehlvd3qf5up3lgn0760; path=/; HttpOnly
+    Last-Modified:
+    - Wed, 10 May 2017 11:50:06 GMT
+    Transfer-Encoding:
+    - chunked
     Content-Type:
-    - text/html; charset=iso-8859-1
+    - text/html; charset=utf-8
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 09 May 2017 03:49:15 GMT
+recorded_at: Wed, 10 May 2017 11:50:07 GMT
