--- a/www.sxmparliament.org/a7db5d1942de422492771575b5f80354dca0a974.yml
+++ b/www.sxmparliament.org/a7db5d1942de422492771575b5f80354dca0a974.yml
@@ -18,9 +18,11 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 02 Jul 2017 13:57:56 GMT
+    - Mon, 03 Jul 2017 15:29:30 GMT
     Server:
-    - Apache/2.4.25
+    - Apache
+    X-Powered-By:
+    - PHP/7.0.18
     X-Logged-In:
     - 'False'
     X-Content-Powered-By:
@@ -34,9 +36,9 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - 6b46cc80a1166fc32f6c9e033728f33d=gaseceqbs4brda9ion1p34vir7; path=/; HttpOnly
+    - 6b46cc80a1166fc32f6c9e033728f33d=6a76dd16b703938a44682bcae50470cd; path=/; HttpOnly
     Last-Modified:
-    - Sun, 02 Jul 2017 13:57:57 GMT
+    - Mon, 03 Jul 2017 15:29:30 GMT
     Transfer-Encoding:
     - chunked
     Content-Type:
@@ -44,4 +46,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 02 Jul 2017 13:57:58 GMT
+recorded_at: Mon, 03 Jul 2017 15:29:30 GMT
